@@ -13,11 +13,11 @@ package com.jaoafa.javajaotan2.lib;
 
 import cloud.commandframework.Command;
 import cloud.commandframework.jda.JDACommandSender;
+import org.checkerframework.checker.nullness.qual.NonNull;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -100,12 +100,9 @@ public class JavajaotanCommand {
         }
     }
 
-    public static class Cmd {
-        private final Command<JDACommandSender>[] commands;
-
+    public record Cmd(@NonNull Command<JDACommandSender>... commands) {
         @SafeVarargs
-        public Cmd(Command<JDACommandSender>... commands) {
-            this.commands = commands;
+        public Cmd {
         }
 
         /**
@@ -114,7 +111,7 @@ public class JavajaotanCommand {
          * @return Commandリスト
          */
         public List<Command<JDACommandSender>> getCommands() {
-            return Arrays.asList(this.commands);
+            return List.of(this.commands);
         }
     }
 }
